--- a/LogisticsApp/Views/Home/Index.cshtml
+++ b/LogisticsApp/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 
-    @foreach (var pu in Model.Select(i => i.Shops))
+    @foreach (var pu in Model.Select(i => i))
     {
         
     }
