--- a/LogisticsApp/Views/Home/Index.cshtml
+++ b/LogisticsApp/Views/Home/Index.cshtml
@@ -1,15 +1,35 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    var isAuthenticated = (bool)ViewData["IsAuthenticated"];
+    var roles = (List<string>)ViewData["Roles"];
 }
 
-@model IEnumerable<Product>
+<h1>Главная страница</h1>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@if (!isAuthenticated)
+{
+    <p>Welcome</p>
+}
+else
+{
+    <p>Вы залогинены</p>
 
-    @foreach (var pu in Model.Select(i => i))
+    @if (roles.Contains("Admin"))
     {
-        
+        <p>Личный кабинет Администратора</p>
     }
-</div>
+
+    @if (roles.Contains("ShopOwner"))
+    {
+        <p>Личный кабинет Владельца магазина</p>
+    }
+
+    @if (roles.Contains("FactoryOwner"))
+    {
+        <p>Личный кабинет Владельца фабрики</p>
+    }
+
+    @if (roles.Contains("Driver"))
+    {
+        <p>Личный кабинет Водителя</p>
+    }
+}
