feat: add ShopController and ProductController

--- a/LogisticsApp/Views/Home/Index.cshtml
+++ b/LogisticsApp/Views/Home/Index.cshtml
@@ -32,4 +32,11 @@ else
     {
         <p>Личный кабинет Водителя</p>
     }
+
+    <p>
+        <a href="@Url.Action("AddRole", "Role")">Назначить роль</a>
+    </p>
+    <p>
+        <a href="@Url.Action("Index", "Shop")">Магазины</a>
+    </p>
 }
