--- a/LogisticsApp/Views/Role/AddRole.cshtml
+++ b/LogisticsApp/Views/Role/AddRole.cshtml
@@ -65,7 +65,7 @@
 </form>
 
 <div>
-    <a href="@Url.Action("Index", "Home")">Назад</a>
+    <a href="@Url.Action("Index", "Home")">Вернуться на главную страницу</a>
 </div>
 
 @section Scripts {
