--- a/LogisticsApp/Views/Shop/Products.cshtml
+++ b/LogisticsApp/Views/Shop/Products.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LogisticsApp.Models.Shop
 
 @{
-    ViewData["Title"] = "Товары магазина " + Model.Title;
+    ViewData["Title"] = "Товары магазина: " + Model.Title;
 }
 
 <h1>Товары магазина: @Model.Title</h1>
