feat: add CRUD method for factory

--- a/LogisticsApp/Views/Shop/Products.cshtml
+++ b/LogisticsApp/Views/Shop/Products.cshtml
@@ -22,4 +22,6 @@ else
     <p>В этом магазине пока нет товаров.</p>
 }
 
-<a href="@Url.Action("Index", "Shop")" class="btn btn-primary">Назад к магазинам</a>
+<div>
+    <a href="@Url.Action("Index", "Shop")">Вернуться к списку магазинов</a>
+</div>
