--- a/LogisticsApp/Views/Home/Index.cshtml
+++ b/LogisticsApp/Views/Home/Index.cshtml
@@ -39,4 +39,7 @@ else
     <p>
         <a href="@Url.Action("Index", "Shop")">Магазины</a>
     </p>
+    <p>
+        <a href="@Url.Action("Index", "Factory")">Фабрики</a>
+    </p>
 }
