feat: add CRUD method for truck

--- a/LogisticsApp/Views/Home/Index.cshtml
+++ b/LogisticsApp/Views/Home/Index.cshtml
@@ -42,4 +42,7 @@ else
     <p>
         <a href="@Url.Action("Index", "Factory")">Фабрики</a>
     </p>
+    <p>
+        <a href="@Url.Action("Index", "Truck")">Грузовики</a>
+    </p>
 }
