--- a/LogisticsApp/Views/Role/AddRole.cshtml
+++ b/LogisticsApp/Views/Role/AddRole.cshtml
@@ -7,14 +7,22 @@
 
     <div class="form-group">
         <label for="roleName">Выберите роль</label>
-        <select id="roleName" class="form-control" asp-for="RoleName" onchange="showAdditionalFields()">
-            <option value="">Выберите роль</option>
-            @foreach (var role in Model.Roles)
-            {
-                <option value="@role.Name" selected="@((Model.RoleName == role.Name) ? "selected" : null)">@role.Name</option>
-            }
-        </select>
-        <span asp-validation-for="RoleName" class="text-danger"></span>
+
+        @if (Model.Roles.Any())
+        {
+            <select id="roleName" class="form-control" asp-for="RoleName" onchange="showAdditionalFields()">
+                <option value="">Выберите роль</option>
+                @foreach (var role in Model.Roles)
+                {
+                    <option value="@role.Name" selected="@((Model.RoleName == role.Name) ? "selected" : null)">@role.Name</option>
+                }
+            </select>
+            <span asp-validation-for="RoleName" class="text-danger"></span>
+        }
+        else
+        {
+            <p class="text-danger">Нет ролей, которые можно присвоить пользователю.</p>
+        }
     </div>
 
     <div id="truckFields" class="additional-fields" style="display:none;">
