--- a/LogisticsApp/Views/Shop/Products.cshtml
+++ b/LogisticsApp/Views/Shop/Products.cshtml
@@ -6,13 +6,24 @@
 
 <h1>Товары магазина: @Model.Title</h1>
 
+<div>
+    <a href="@Url.Action("AddProduct", "Shop", new { shopId = Model.Id })" class="btn btn-primary mb-3">Добавить товар</a>
+</div>
+
 @if (Model.ShopProducts.Any())
 {
     <ul class="list-group">
         @foreach (var shopProduct in Model.ShopProducts)
         {
-            <li class="list-group-item">
-                @shopProduct.Product.Title - Количество: @shopProduct.Quantity
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <a href="@Url.Action("ProductDetails", "Shop", new { shopId = Model.Id, productId = shopProduct.Product.Id })">
+                    @shopProduct.Product.Title
+                </a> - Количество: @shopProduct.Quantity
+
+                <div>
+                    <a href="@Url.Action("UpdateProduct", "Shop", new { shopId = Model.Id, productId = shopProduct.Product.Id })" class="btn btn-warning btn-sm">Изменить количество</a>
+                    <a href="@Url.Action("DeleteProduct", "Shop", new { shopId = Model.Id, productId = shopProduct.Product.Id })" class="btn btn-danger btn-sm">Удалить</a>
+                </div>
             </li>
         }
     </ul>
