feat: add CRUD for product

--- a/LogisticsApp/Views/Home/Index.cshtml
+++ b/LogisticsApp/Views/Home/Index.cshtml
@@ -45,4 +45,7 @@ else
     <p>
         <a href="@Url.Action("Index", "Truck")">Грузовики</a>
     </p>
+    <p>
+        <a href="@Url.Action("Index", "Product")">Продукты</a>
+    </p>
 }
