--- a/LogisticsApp/Views/Home/Index.cshtml
+++ b/LogisticsApp/Views/Home/Index.cshtml
@@ -48,4 +48,7 @@ else
     <p>
         <a href="@Url.Action("Index", "Product")">Продукты</a>
     </p>
+    <p>
+        <a href="@Url.Action("Index", "OrderedProduct")">Заказанные продукты</a>
+    </p>
 }
