feat: add Index and ProductDetails to LoadedProductController.cs

--- a/LogisticsApp/Views/Home/Index.cshtml
+++ b/LogisticsApp/Views/Home/Index.cshtml
@@ -51,4 +51,7 @@ else
     <p>
         <a href="@Url.Action("Index", "OrderedProduct")">Заказанные продукты</a>
     </p>
+    <p>
+        <a href="@Url.Action("Index", "LoadedProduct")">Загруженные в грузовики продукты</a>
+    </p>
 }
