refactor: rename "продукт" to "товар"

--- a/LogisticsApp/Views/Factory/Order.cshtml
+++ b/LogisticsApp/Views/Factory/Order.cshtml
@@ -1,10 +1,10 @@
 ﻿@model LogisticsApp.Models.OrderProductViewModel
 
 @{
-    ViewData["Title"] = "Оформить заказ: " + Model.ProductId;
+    ViewData["Title"] = "Оформить заказ";
 }
 
-<h1>Оформить заказ для продукта</h1>
+<h1>Оформить заказ</h1>
 
 <form method="post">
     <div class="form-group">
