--- a/LogisticsApp/Views/Factory/Produce.cshtml
+++ b/LogisticsApp/Views/Factory/Produce.cshtml
@@ -1,10 +1,10 @@
 ﻿@model LogisticsApp.Models.ProduceProductViewModel
 
 @{
-    ViewData["Title"] = "Произвести продукт";
+    ViewData["Title"] = "Произвести товар";
 }
 
-<h1>Произвести продукт</h1>
+<h1>Произвести товар</h1>
 
 <form method="post">
     <div class="form-group">
