--- a/LogisticsApp/Views/Factory/ProduceNewProduct.cshtml
+++ b/LogisticsApp/Views/Factory/ProduceNewProduct.cshtml
@@ -1,14 +1,14 @@
 ﻿@model LogisticsApp.Models.ProduceNewProductViewModel
 
 @{
-    ViewData["Title"] = "Произвести новый продукт";
+    ViewData["Title"] = "Произвести новый товар";
 }
 
-<h1>Произвести новый продукт</h1>
+<h1>Произвести новый товар</h1>
 
 <form method="post">
     <div class="form-group">
-        <label for="Title">Название продукта</label>
+        <label for="Title">Название товара</label>
         <input type="text" class="form-control" id="Title" name="Title" required />
     </div>
 
