--- a/LogisticsApp/Views/Factory/Products.cshtml
+++ b/LogisticsApp/Views/Factory/Products.cshtml
@@ -9,7 +9,7 @@
 @if (Model.Factory.PortalUserId == Model.CurrentUserId)
 {
     <div>
-        <a href="@Url.Action("ProduceNewProduct", "Factory", new { factoryId = Model.Factory.Id })" class="btn btn-success mb-3">Произвести новый продукт</a>
+        <a href="@Url.Action("ProduceNewProduct", "Factory", new { factoryId = Model.Factory.Id })" class="btn btn-success mb-3">Произвести новый товар</a>
     </div>
 }
 
