--- a/LogisticsApp/Views/OrderedProduct/Index.cshtml
+++ b/LogisticsApp/Views/OrderedProduct/Index.cshtml
@@ -4,10 +4,10 @@
 
 
 @{
-    ViewData["Title"] = "Заказанные продукты";
+    ViewData["Title"] = "Заказанные товары";
 }
 
-<h1>Заказанные продукты</h1>
+<h1>Заказанные товары</h1>
 
 @if (Model.Any())
 {
@@ -29,5 +29,5 @@
 }
 else
 {
-    <p>Нет заказанных продуктов.</p>
+    <p>Нет заказанных товаров.</p>
 }
