--- a/LogisticsApp/Views/LoadedProduct/Index.cshtml
+++ b/LogisticsApp/Views/LoadedProduct/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<LogisticsApp.Models.LoadedProductViewModel>
 
 @{
-    ViewData["Title"] = "Загруженные продукты";
+    ViewData["Title"] = "Загруженные товары";
 }
 
-<h1>Загруженные продукты</h1>
+<h1>Загруженные товары</h1>
 
 @if (Model.Any())
 {
@@ -21,5 +21,5 @@
 }
 else
 {
-    <p>Нет загруженных продуктов.</p>
+    <p>Нет загруженных товаров.</p>
 }
