--- a/LogisticsApp/Views/Product/Details.cshtml
+++ b/LogisticsApp/Views/Product/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model LogisticsApp.Models.Product
 
 @{
-    ViewData["Title"] = "Информация о продукте: " + Model.Title;
+    ViewData["Title"] = "Информация о товаре: " + Model.Title;
 }
 
-<h1>Информация о продукте: @Model.Title</h1>
+<h1>Информация о товаре: @Model.Title</h1>
 
 <div>
     <p><strong>Масса:</strong> @Model.Mass кг</p>
