--- a/LogisticsApp/Views/Shop/AddProduct.cshtml
+++ b/LogisticsApp/Views/Shop/AddProduct.cshtml
@@ -8,7 +8,7 @@
 
 <form method="post">
     <div class="form-group">
-        <label for="ProductId">Выберите продукт</label>
+        <label for="ProductId">Выберите товар</label>
 
         @if (Model.Products.Any())
         {
@@ -21,7 +21,7 @@
         }
         else
         {
-            <p class="text-danger">Нет продуктов, которые можно добавить в магазин.</p>
+            <p class="text-danger">Нет товаров, которые можно добавить в магазин.</p>
         }
     </div>
 
